- Remove unused imports - Make member final where possible - Use method reference when possible - Remove unnecessary casting - Replace deprecated method calls with future prove method calls - Use Standard UTF-8 Charset constant